--- a/app/globals.css
+++ b/app/globals.css
@@ -39,6 +39,15 @@ a {
   text-decoration: none;
 }
 
+.hide-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
